--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 		</div>
 	</nav>
 </header>
+
 <main>
 	<div class="main__welcome">
 		
@@ -46,7 +47,6 @@
 	<div class="main__team">
 		<div class="wrapper">
 		<h1>OUR TEAM</h1>
-			<!--<div class="line"></div>-->
 			<div class="team__cards">
 				<div class="card">
 					<div class="photo"></div>
@@ -76,11 +76,10 @@
 		</div>
 	</div>
 
-<div class="main__services">
-	<div class="wrapper">
-		<h1>OUR SERVICES</h1>
-		<!--<div class="line"></div>-->
-		<p><i>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus ex quidem maiores ullam quis, at asperiores minus ad eaque maxime possimus cum ab iusto assumenda velit excepturi porro ipsa tenetur.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus ex quidem maiores ullam quis, at asperiores minus ad eaque maxime possimus cum ab iusto assumenda velit excepturi porro ipsa tenetur.</i></p>
+	<div class="main__services">
+		<div class="wrapper">
+			<h1>OUR SERVICES</h1>
+			<p><i>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus ex quidem maiores ullam quis, at asperiores minus ad eaque maxime possimus cum ab iusto assumenda velit excepturi porro ipsa tenetur.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus ex quidem maiores ullam quis, at asperiores minus ad eaque maxime possimus cum ab iusto assumenda velit excepturi porro ipsa tenetur.</i></p>
 		<div class="services__cards">
 			<div class="services__card">
 				<img src="img/webdesign.png" alt="webdesign">
@@ -103,30 +102,28 @@
 				<p>The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.</p>
 			</div>
 		</div>
-	</div>
-</div>
-
-<div class="main__clients">
-	<div class="wrapper">
-		<h1>SOME OF OUR CLIENTS</h1>
-		<!--<div class="line"></div>-->
-
-		<div class="clients">
-			<img src="img/chanel.png" alt="chanel">
-			<img src="img/guerlain.png" alt="guerlain">
-			<img src="img/lacoste.png" alt="lacoste">
-			<img src="img/lancome.png" alt="lancome">
-			<img src="img/zara.png" alt="zara">
 		</div>
 	</div>
-</div>
+
+	<div class="main__clients">
+		<div class="wrapper">
+			<h1>SOME OF OUR CLIENTS</h1>
+
+			<div class="clients">
+				<img src="img/chanel.png" alt="chanel">
+				<img src="img/guerlain.png" alt="guerlain">
+				<img src="img/lacoste.png" alt="lacoste">
+				<img src="img/lancome.png" alt="lancome">
+				<img src="img/zara.png" alt="zara">
+			</div>
+		</div>
+	</div>
 
 
-<div class="main__work">
-	<div class="wrapper">
-		<h1>TAKE A LOOK AT OUR WORK</h1>
-		<!--<div class="line"></div>-->
-		<p><i>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus ex quidem maiores ullam quis, at asperiores minus ad eaque maxime possimus cum ab iusto assumenda velit excepturi porro ipsa tenetur.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus ex quidem maiores ullam quis, at asperiores minus ad eaque maxime possimus cum ab iusto assumenda velit excepturi porro ipsa tenetur.</i></p>
+	<div class="main__work">
+		<div class="wrapper">
+			<h1>TAKE A LOOK AT OUR WORK</h1>
+			<p><i>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus ex quidem maiores ullam quis, at asperiores minus ad eaque maxime possimus cum ab iusto assumenda velit excepturi porro ipsa tenetur.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus ex quidem maiores ullam quis, at asperiores minus ad eaque maxime possimus cum ab iusto assumenda velit excepturi porro ipsa tenetur.</i></p>
 
 		<div class="gallery">
 			<div class="line1">
@@ -148,43 +145,39 @@
 				<img src="img/3.png" alt="">
 			</div>
 		</div>
+		</div>
 	</div>
-</div>
 
 
 
 
-<div class="main__testimonials">
-	<div class="wrapper">
-		<h1>our clients’ testimonials</h1>
-		<!--<div class="line"></div>-->
-		<p class="testimonial">This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.</p>
-		<p>Dean Martin, CEO Acme Inc.</p>
+	<div class="main__testimonials">
+		<div class="wrapper">
+			<h1>our clients’ testimonials</h1>
+			<p class="testimonial">This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.</p>
+			<p>Dean Martin, CEO Acme Inc.</p>
+		</div>
 	</div>
-</div>
 
 
-<section class="contact__from">
-	<div class="contact__wrapper">
-		<h1>CONTACT US</h1>
-	<!--<div class="line"></div>-->
-	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus ex quidem maiores ullam quis, at asperiores minus ad eaque maxime possimus cum ab iusto assumenda velit excepturi porro ipsa tenetur.Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-		<form action="#" name="newform" method="post">
-			<div class="form__inputs">
-				<p>Name <span class="red">*</span><input type="text"></p>
-				<p>Email address <span class="red">*</span><input type="text"></p>
-				
+	<section class="contact__from">
+		<div class="contact__wrapper">
+			<div class="wrapper">
+				<h1>CONTACT US</h1>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus ex quidem maiores ullam quis, at asperiores minus ad eaque maxime possimus cum ab iusto assumenda velit excepturi porro ipsa tenetur.Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+				<form action="#" name="newform" method="post" class="form__inputs">
+					<input type="text" placeholder="Name">
+					<input type="text" placeholder="Email">	
+					<textarea name="text"></textarea>
+					<div class="button__block">
+						<input type="submit" value="SEND">
+					</div>
+				</form>
 			</div>
-			<p>Message <span class="red">*</span></p>
-			<textarea name="text"></textarea>
-			<div class="button__block">
-				<input type="submit" value="SEND">
-			</div>
-		</form>
-	</div>
-</section>
-
+		</div>
+	</section>
 </main>
+
 <footer>
 	<div class="wrapper">
 		<div class="social">
@@ -197,6 +190,6 @@
 	</div>
 </footer>
 
-
+<script type="text/javascript" src="script.js"></script>
 </body>
 </html>
